Fix navbar spacing bug in desktop layout

--- a/css/index.css
+++ b/css/index.css
@@ -82,6 +82,7 @@ header {
 }
 
 nav {
+	width: 800px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
